<resources>
    <string name="app_name">Surat</string>
    <string name="camera_permission_needed">Camera Permission Needed</string>
    <string name="camera_permission_message">We need camera access to capture photos. Please enable it in settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="camera_permission_needed_message">Camera permission is needed to take photos.</string>
    <string name="error_creating_photo_uri">Error creating photo URI</string>
    <string name="error_creating_photo">Error creating photo</string>

    <string name="orientation_90">90 degrees rotated (Portrait)</string>
    <string name="orientation_180">180 degrees rotated (Upside Down)</string>
    <string name="orientation_270">270 degrees rotated (Landscape)</string>
    <string name="orientation_normal">Normal (Landscape)</string>
    <string name="orientation_unknown">Unknown orientation</string>
    <string name="search_hint">Search by name</string>

    <string name="take_a_picture">take a picture</string>
    <string name="select_date_range_to_filter">Select date range to filter:</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="filter_by">filter by:</string>
    <string name="date_range">date range</string>
    <string name="keyword">keyword</string>
    <string name="sort_by">sort by:</string>
    <string name="name">name</string>
    <string name="date">date</string>
</resources>